🐛 Fixed returns not being typed as expected
